--- a/src/a.tex
+++ b/src/a.tex
@@ -2393,7 +2393,7 @@ $\FFF'=\Set{\uu+\vv|\uu\in\KKK}$
   \end{align*}
   である.
 \end{proof}
-\begin{proofof}{det:multilinear:row}{scalar}
+\begin{proofof*}{det:multilinear:row}{scalar}
   行列のサイズ$n$に関する帰納法で示す.
   \paragraph{Base case}
   $n=1$とする.
@@ -2428,7 +2428,7 @@ $\FFF'=\Set{\uu+\vv|\uu\in\KKK}$
     &=
     \alpha\det(A').
   \end{align*}
-\end{proofof}
+\end{proofof*}
 \begin{lemma}
   \label{lem:det:multilinear:row:sum:1}
   $n>1$とし,
@@ -2488,7 +2488,7 @@ $\FFF'=\Set{\uu+\vv|\uu\in\KKK}$
 \end{proof}
 
 
-\begin{proofof}{det:multilinear:row}{sum}
+\begin{proofof*}{det:multilinear:row}{sum}
   行列のサイズ$n$に関する帰納法で示す.
   \paragraph{Base case}
   $n=1$とする.
@@ -2533,7 +2533,7 @@ $\FFF'=\Set{\uu+\vv|\uu\in\KKK}$
     &=
     \alpha\det(A')+\alpha\det(A'').
   \end{align*}
-\end{proofof}
+\end{proofof*}
 
 
 \begin{lemma}
