--- a/src/p.tex
+++ b/src/p.tex
@@ -4841,7 +4841,7 @@ $I$に属する組の総数$\#I(\sigma)$を$\sigma$の
   $\alpha$を数とする.
   \begin{enumerate}
   \item
-    \provelater**{scalar}
+    \provelater*{scalar}
     $A'$の$t$行目を$\alpha$倍したもを$A$とすると,
     $\det(A)=\alpha\det(A')$.
 
@@ -4858,7 +4858,7 @@ $I$に属する組の総数$\#I(\sigma)$を$\sigma$の
       \det(A)=\alpha\det(A').
     \end{align*}
   \item
-    \provelater**{sum}
+    \provelater*{sum}
     $A$, $A'$, $A''$は$t$行目以外は等しいとし,
     $A$の$t$行目は$A'$の$t$行目と$A''$の$t$行目の和であるとすると,
     $\det(A)=\det(A')+\alpha(A'')$.
