--- a/src/p.tex
+++ b/src/p.tex
@@ -4618,16 +4618,16 @@ $F(i;c)$,
 $G(i,j;c)$は三角行列であるので,
 同様に計算できる.
 
-\begin{lemma}
+\begin{example}
   基本行列$F(i;c)$に対し,
    $\det(F(i;c))=c$.
-\end{lemma}
+\end{example}
 
-\begin{lemma}
+\begin{example}
   $i\neq j$とする.
   基本行列$G(i,j;c)$に対し,
    $\det(G(i,j;c))=1$.
-\end{lemma}
+\end{example}
 
 
 定義では$1$行目で展開したが,
