--- a/src/a.tex
+++ b/src/a.tex
@@ -2746,6 +2746,66 @@ $\FFF'=\Set{\uu+\vv|\uu\in\KKK}$
 \end{remark}
 
 
+
+\begin{proofof*}{lem:mul:alt:rowfun}{mul}
+  多重線型性から明らか.
+\end{proofof*}
+\begin{proofof*}{lem:mul:alt:rowfun}{sum}
+  $t$行目以外は
+  $A'$と等しく,
+  $t$行目は
+  $A'$の
+  $s$行目と等しいような
+  $n$次正方行列$A''$を考える.
+  このとき, 交代性から$D(A'')=0$である.
+  また, $A''$の$t$行目を$\alpha$倍をした行列を$A'''$とすると,
+  $t$行目に関する線型性から
+  $D(A''')=\alpha D(A'')=\alpha 0=0$
+  である.
+  一方$A'$の$t$行目に$s$行目の$\alpha$倍を加えたものを$A$とすると,
+  $t$行目に関する線型性から,
+  $D(A)=D(A')+D(A''')$である.
+  したがって$D(A)=D(A')+D(A''')=D(A')+0=D(A')$.
+\end{proofof*}
+\begin{proofof*}{lem:mul:alt:rowfun}{alt}
+  $A'$の$t$行目に$s$行目を加えた行列を$A$とする.
+  このとき, 
+  $D(A)=D(A')$を示す.
+  
+  $t$行目以外は
+  $A'$と等しく,
+  $t$行目は
+  $A'$の
+  $s$行目と等しいような
+  $n$次正方行列$A''$を考える.
+  このとき, 交代性から$D(A'')=0$である.
+  また, $A''$の$t$行目を$\alpha$倍をした行列を$A'''$とすると,
+  $t$行目に関する線型性から
+  $D(A''')=\alpha D(A'')=\alpha 0=0$
+  である.
+  一方$A'$の$t$行目に$s$行目の$\alpha$倍を加えたものを$A$とすると,
+  $t$行目に関する線型性から,
+  $D(A)=D(A')+D(A''')$である.
+  したがって$D(A)=D(A')+D(A''')=D(A')+0=D(A')$.
+\end{proofof*}
+\begin{proofof*}{lem:mul:alt:rowfun}{alt}
+  $A'$の$t$行目と$s$行目を入れ替えた行列を$A$とする.
+  このとき, 
+  $D(A)=-D(A')$を示す.
+
+  $A'$の$t$行目に$s$行目の$-1$倍を加えるたものを$A''$とおく.
+  $A''$の$s$行目に$t$行目の$1$倍を加えたものを$A'''$とする.
+  $A'''$の$s$行目は$A'$の$t$行目と等しい.
+  $A'''$の$t$行目に$s$行目の$-1$倍を加えたものを$A''''$とする.
+  $A''''$の$t$行目は$A'$の$s$行目の$-1$倍に等しく,
+  $A''''$の$s$行目は$A'$の$t$行目に等しい.
+  また$D(A')=D(A'''')$である.
+  $A''''$の$t$行目を$-1$倍したものは$A$に等しいので,
+  $t$行目に関する線型性から,
+  $D(A)=-D(A''')=-D(A')$.
+\end{proofof*}
+
+
 \endinput
 
 \section{逆行列や正則に関する命題の証明}
